cleanup of cache 0